# lab5-tcp-1

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/app/: CMakeLists.txt
client/app/include/: clientcontroller.h  clientsettings.h  mainwindow.h  sessionmode.h
client/app/src/: clientcontroller.cpp  clientsettings.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
client/tests/: CMakeLists.txt  test_clientcontroller.cpp  test_clientsettings.cpp  test_mainwindow.cpp  test_packetprotocol.cpp  test_sessionmode.cpp
server/: CMakeLists.txt
server/app/: CMakeLists.txt
server/app/include/: mainwindow.h  packetprotocol.h  servercontroller.h  serversettings.h
server/app/src/: main.cpp  mainwindow.cpp  mainwindow.ui  packetprotocol.cpp  servercontroller.cpp  serversettings.cpp
server/tests/: CMakeLists.txt  test_mainwindow.cpp  test_packetprotocol.cpp  test_servercontroller.cpp  test_serversettings.cpp
